# redesigned-gen-aibi-dashboard

./: LICENSE  README.md  setup.cfg
examples/: basic_usage.py  real_time_example.py:
src/genai_dashboard/: __init__.py
src/genai_dashboard/aws/: bedrock.py  kinesis_manager.py:  quicksight.py
src/genai_dashboard/config/: settings.py
src/genai_dashboard/core/: dashboard.py  processor.py  real_time_processor.py:
src/genai_dashboard/utils/: validators.py
tests/: test_dashboard.py  test_processor.py
