[metadata]
name = genai-dashboard
version = 0.1.0
description = AI-powered sales dashboard generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/genai-dashboard

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    boto3>=1.26.0
    pandas>=1.3.0
    numpy>=1.21.0
    scikit-learn>=1.0.0
    langchain>=0.0.200

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    black>=22.0
    isort>=5.0
    flake8>=4.0
